# unar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: main.rs
